<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VjezbeAIRg2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="open_map">Open map</string>
    <string name="open_db">Open db</string>
    
    <string name="optMapRefresh">Refresh Map</string>
    <string name="optMapSettings">Settings</string>
    <string name="optLocalDara">Local data</string>
    
    <string name="user_settings">User settings</string>
    <string name="poi_settings">POI settings</string>
    <string name="user_email">User email</string>
    <string name="user_email_summary">Enter your email to receive map information</string>
    <string name="show_user_location">Show user location</string>
    <string name="show_user_location_summary">Summary if enabled, current user location will be shown on mp</string>
    <string name="poi_source">POI source</string>
    <string name="poi_source_summary">Select between available source of information</string>
    
    <string name="poi_id">ID</string>
    <string name="poi_name">Name</string>
    <string name="poi_description">Description</string>
    <string name="poi_add">Add</string>
    <string name="cancel">Cancel</string>
    
    <string name="db_context_menu_header">Choose action</string>
    <string name="poi_update">Update</string>
    <string name="poi_delete">Delete</string>
    
    

</resources>
